--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ on:
       - published
 
 env:
-  MSRV: '1.73.0'
+  MSRV: "1.85.0"
 
   # Set up sccache with GitHub Actions cache
   RUSTC_WRAPPER: sccache
