--- a/packages/optivorbis/Cargo.toml
+++ b/packages/optivorbis/Cargo.toml
@@ -43,7 +43,7 @@ console_error_panic_hook = { version = "0.1.7", optional = true }
 crate-type = ["lib", "cdylib"]
 
 [dev-dependencies]
-pretty_env_logger = "0.5.0"
+test-log = "0.2.18"
 oggvorbismeta = "0.2.0"
 
 [features]
