chore: reformats, get rid of old non-flat ESLint config, updates

--- a/web/package.json
+++ b/web/package.json
@@ -15,33 +15,35 @@
     "../target/webpkg"
   ],
   "devDependencies": {
-    "@eslint/js": "9.31.0",
-    "@tailwindcss/postcss": "4.1.11",
-    "@typescript-eslint/parser": "8.38.0",
+    "@eslint/js": "9.36.0",
+    "@tailwindcss/postcss": "4.1.13",
+    "@typescript-eslint/parser": "8.44.0",
     "@wasm-tool/wasm-pack-plugin": "1.7.0",
     "autoprefixer": "10.4.21",
     "css-loader": "7.1.2",
-    "cssnano": "7.1.0",
-    "eslint": "9.31.0",
+    "cssnano": "7.1.1",
+    "eslint": "9.36.0",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "2.32.0",
+    "favicons": "7.2.0",
     "favicons-webpack-plugin": "6.0.1",
-    "globals": "16.3.0",
-    "html-webpack-plugin": "5.6.3",
-    "mini-css-extract-plugin": "2.9.2",
+    "globals": "16.4.0",
+    "html-webpack-plugin": "5.6.4",
+    "mini-css-extract-plugin": "2.9.4",
     "postcss": "8.5.6",
-    "postcss-loader": "8.1.1",
+    "postcss-loader": "8.2.0",
+    "sharp": "0.34.4",
     "svg-inline-loader": "0.8.2",
-    "tailwindcss": "4.1.11",
-    "ts-loader": "9.5.2",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.38.0",
-    "webpack": "5.100.2",
+    "tailwindcss": "4.1.13",
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.44.0",
+    "webpack": "5.101.3",
     "webpack-cli": "6.0.1",
     "webpack-dev-server": "5.2.2"
   },
   "dependencies": {
-    "core-js": "3.44.0",
+    "core-js": "3.45.1",
     "optivorbis": "*"
   }
 }
