--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,55 @@
 [workspace]
+resolver = "3"
 members = ["packages/*"]
 default-members = ["packages/optivorbis", "packages/optivorbis_cli"]
-resolver = "3"
 
 [workspace.package]
-authors = ["Alejandro González <me@alegon.dev>"]
 version = "0.3.0"
-homepage = "https://optivorbis.github.io/OptiVorbis"
-repository = "https://github.com/OptiVorbis/OptiVorbis"
-keywords = ["audio", "ogg", "vorbis", "optimization", "compression"]
-categories = ["compression", "multimedia::audio"]
+authors = ["Alejandro González <me@alegon.dev>"]
 edition = "2024"
 rust-version = "1.85.0"
+homepage = "https://optivorbis.github.io/OptiVorbis"
+repository = "https://github.com/OptiVorbis/OptiVorbis"
+keywords = ["audio", "compression", "ogg", "optimization", "vorbis"]
+categories = ["compression", "multimedia::audio"]
 
 [workspace.dependencies]
-optivorbis = { version = "0.3.0", path = "packages/optivorbis" }
-vorbis_bitpack = { version = "0.2.0", path = "packages/vorbis_bitpack" }
+acid_io = "0.1.0"
+afl = "0.15.16"
+bumpalo = "3.17.0"
+console_error_panic_hook = "0.1.7"
+console_log = "1.0.0"
+getopts = "0.2.21"
+getrandom = "0.3.1"
+indexmap = "2.8.0"
+libm = "0.2.11"
 log = "0.4.26"
+ogg = "0.9.2"
+oggvorbismeta = "0.2.0"
+optivorbis = { path = "packages/optivorbis", version = "0.3.0" }
+ouroboros = "0.18.5"
+rand_xoshiro = "0.7.0"
+slice-group-by = "0.3.1"
+stderrlog = { version = "0.6.0", default-features = false }
+test-log = "0.2.18"
+thiserror = "2.0.16"
+tinyvec = { version = "1.9.0", default-features = false, features = [
+  "alloc",
+  "rustc_1_57",
+] }
+vorbis_bitpack = { path = "packages/vorbis_bitpack", version = "0.2.0" }
+wasm-bindgen = { version = "0.2.100", default-features = false }
 
 [profile.release]
-lto = "fat"
-codegen-units = 1
-panic = "abort"
 strip = "symbols"
+lto = "fat"
+panic = "abort"
+codegen-units = 1
 
 [profile.fuzzing]
 inherits = "release"
-panic = "unwind"
 overflow-checks = true
+panic = "unwind"
 
 [profile.bench]
 inherits = "release"
