--- a/packages/optivorbis_cli/Cargo.toml
+++ b/packages/optivorbis_cli/Cargo.toml
@@ -1,26 +1,18 @@
 [package]
 name = "optivorbis_cli"
-description = "Command-line interface application for lossless Vorbis optimization and repair"
-authors.workspace = true
-license = "AGPL-3.0-or-later"
 version.workspace = true
+authors.workspace = true
+edition.workspace = true
+description = "Command-line interface application for lossless Vorbis optimization and repair"
+readme = "../../README.md"
 homepage.workspace = true
 repository.workspace = true
-readme = "../../README.md"
+license = "AGPL-3.0-or-later"
 keywords.workspace = true
 categories.workspace = true
-edition.workspace = true
 publish = false
 
-[dependencies]
-optivorbis.workspace = true
-
-getopts = "0.2.21"
-log.workspace = true
-stderrlog = { version = "0.6.0", default-features = false }
-
 [[bin]]
-name = "optivorbis"
 # This binary target has the same name as the main library target.
 # In general, Cargo does not support that, but it is only troublesome
 # for us when running rustdoc, as the binary and library executables
@@ -29,3 +21,10 @@ name = "optivorbis"
 # This binary crate is straightforward enough to not need documentation,
 # so let's just not document it.
 doc = false
+name = "optivorbis"
+
+[dependencies]
+getopts.workspace = true
+log.workspace = true
+optivorbis.workspace = true
+stderrlog.workspace = true
