fix: make WASM builds work on latest nightly
rustc 1.92.0-nightly (975e6c8fe 2025-09-23) changed how opt-in to
immediate abort panics works to be just another panic mode, albeit an
unstable one.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,8 +3,13 @@
 # This file is primarily useful for specifying custom rustflags
 
 [target.'cfg(all(target_os = "linux", target_arch = "aarch64"))']
-linker = 'aarch64-linux-gnu-gcc'
-runner = 'qemu-aarch64'
+linker = "aarch64-linux-gnu-gcc"
+runner = "qemu-aarch64"
 
 [target.wasm32-unknown-unknown]
-rustflags = ["--cfg", 'getrandom_backend="wasm_js"']
+rustflags = [
+  "--cfg",
+  'getrandom_backend="wasm_js"',
+  "-Zunstable-options",
+  "-Cpanic=immediate-abort",
+]
