perf(wasm): optimize release builds for size
This shaves off quite a few KiB, >30 KiB, which for WASM targets is
a performance improvement overall.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,10 @@ lto = "fat"
 panic = "abort"
 codegen-units = 1
 
+[profile.min-size-release]
+inherits = "release"
+opt-level = "z"
+
 [profile.fuzzing]
 inherits = "release"
 overflow-checks = true
