--- a/packages/optivorbis/Cargo.toml
+++ b/packages/optivorbis/Cargo.toml
@@ -27,12 +27,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 # - Second, we want to optimize for size as much as possible, so we use the -Oz flag,
 #   which is more aggressive than the default -O flag, equivalent to -Os.
 [package.metadata.wasm-pack.profile]
-release = { wasm-opt = [
-  "-Oz",
-  "--enable-bulk-memory",
-  "--enable-nontrapping-float-to-int",
-] }
-profiling = { wasm-opt = [
+custom = { wasm-opt = [
   "-Oz",
   "--enable-bulk-memory",
   "--enable-nontrapping-float-to-int",
