--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,7 +176,11 @@ jobs:
           node-version: 22
 
       - name: 🧰 Install wasm-pack
-        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+        uses: taiki-e/cache-cargo-install-action@v2
+        with:
+          tool: wasm-pack
+          git: https://github.com/drager/wasm-pack.git
+          rev: cd1718aa
 
       - name: 💨 Set up sccache
         uses: mozilla-actions/sccache-action@7d986dd989559c6ecdb630a3fd2557667be217ad # v0.0.9
