ci: drop usage of stabilized `-Zdoctest-xcompile` option
Cross-compiling doctets is the default behavior now, and there is no
need to enable it.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
 
       - name: ✔️ Run tests
         run:
-          cargo test --release --target ${{ matrix.target }} -Zdoctest-xcompile
+          cargo test --release --target ${{ matrix.target }}
           -p optivorbis -p optivorbis_cli -p vorbis_bitpack
 
       - name: 📚 Build documentation
